--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
+				<systemPropertyVariables>
+					<username>${Dusername}</username>
+					<password>${Dpassword}</password>
+					<sonarurl>${Dsonarurl}</sonarurl>
+					<fortifyurl>${Dfortifyurl}</fortifyurl>
+					<synurl>${Dsynurl}</synurl>
+				</systemPropertyVariables>
 					<suiteXmlFiles>
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 						</suiteXmlFiles>
