--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,25 @@
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
   <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>3.141.59</version>
-    </dependency>
-    <dependency>
-    <groupId>org.apache.commons</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>1.3.2</version>
-</dependency>
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>7.4.0</version>
-    <scope>compile</scope>
-</dependency>
+			<groupId>com.manulife.automation</groupId>
+			<artifactId>selenium-core</artifactId>
+			<version>6.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.manulife.automation</groupId>
+			<artifactId>data-readers</artifactId>
+			<version>6.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.manulife.automation</groupId>
+			<artifactId>pdf-util</artifactId>
+			<version>6.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.manulife.automation</groupId>
+			<artifactId>db-util</artifactId>
+			<version>6.2.2</version>
+		</dependency>
   </dependencies>
   <build>
   <plugins>
