--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,23 @@
 </dependency>
   </dependencies>
 	
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>institutional-grs-maven-release</name>
+			<url>https://artifactory.platform.manulife.io/artifactory/institutional-grs-maven-release</url>
+		</repository>
+		<repository>
+			<snapshots/>
+			<id>snapshots</id>
+			<name>institutional-grs-maven-snapshot</name>
+			<url>https://artifactory.platform.manulife.io/artifactory/institutional-grs-maven-snapshot</url>
+		</repository>
+	</repositories>
+	
 	<pluginRepositories>
 		<pluginRepository>
 			<snapshots>
