--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ linux ]
+    branches: [ main ]
   pull_request:
-    branches: [ linux ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,5 +32,3 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: mvn clean test
-          echo Add other actions to build,
-          echo test, and deploy your project.
