--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,4 +31,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: compile test -DsuiteXmlFile=testng.xml
+        run: mvn test -DsuiteXmlFile=testng.xml
